Closed Bug 1028734 Opened 11 years ago Closed 11 years ago

--disable-ion build fails: js/src/vm/ForkJoin.h:363:56: error: 'js::jit::IonBailoutIterator' has not been declared

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

In file included from js/src/builtin/RegExp.cpp:17: In file included from js/src/jsobjinlines.h:21: In file included from js/src/jsgcinlines.h:13: js/src/vm/ForkJoin.h:363:56: error: no type named 'IonBailoutIterator' in namespace 'js::jit' void rematerializeFrames(ForkJoinContext *cx, jit::IonBailoutIterator &f... ~~~~~^ 1 error generated.
Attached patch fixSplinter Review
Attachment #8444234 - Flags: review?(shu)
Comment on attachment 8444234 [details] [diff] [review] fix Review of attachment 8444234 [details] [diff] [review]: ----------------------------------------------------------------- Thanks for fixing!
Attachment #8444234 - Flags: review?(shu) → review+
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: