Bug 1028734 - Unbreak --disable-ion build after bug 1019304. r=shu